--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ DB_NAME=your_database_name
 DB_USER=your_username
 DB_PASS=your_password
 DB_URL = postgres://USER:PASSWORD@HOST/DBNAME?sslmode=require
+# Allow automatic Sequelize sync/alter to run during development; set to true only when needed
+DB_AUTO_SYNC_MODELS=false
 
 # Server Configuration
 PORT=3000
